[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/Enemy/Soldier Characters Pack by RgsDev/soldier_1_outline/soldier_1_outline_idle_3.png" type="Texture" id=1]
[ext_resource path="res://assets/Enemy/Soldier Characters Pack by RgsDev/soldier_1_outline/soldier_1_outline_shot_1.png" type="Texture" id=2]
[ext_resource path="res://assets/Enemy/Soldier Characters Pack by RgsDev/soldier_1_outline/soldier_1_outline_idle_2.png" type="Texture" id=3]
[ext_resource path="res://assets/Enemy/Soldier Characters Pack by RgsDev/soldier_1_outline/soldier_1_outline_shot_0.png" type="Texture" id=4]
[ext_resource path="res://assets/Enemy/Soldier Characters Pack by RgsDev/soldier_1_outline/soldier_1_outline_idle_1.png" type="Texture" id=5]
[ext_resource path="res://assets/Enemy/Soldier Characters Pack by RgsDev/soldier_1_outline/soldier_1_outline_idle_0.png" type="Texture" id=6]
[ext_resource path="res://assets/Enemy/Soldier Characters Pack by RgsDev/soldier_1_outline/soldier_1_outline_idle_4.png" type="Texture" id=7]
[ext_resource path="res://Scripts/Enemy_Script/Shooter_Stop.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Enemies/Bullet.tscn" type="PackedScene" id=9]
[ext_resource path="res://sounds/shooter_soundeffect/we_ak47s_lb_04_hpx.mp3" type="AudioStream" id=10]
[ext_resource path="res://sounds/shooter_soundeffect/GunShotSnglShotIn PE1097906.mp3" type="AudioStream" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 2 ) ],
"loop": false,
"name": "shoot",
"speed": 10.0
} ]

[node name="Shooter_Stop" type="Area2D"]
pause_mode = 2
collision_layer = 2
script = ExtResource( 8 )
Bullet = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -15 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 1 )
animation = "shoot"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -1, -15, 4, -15, 10, -8, 13, -1, 13, 2, 6, 3, 7, 11, 4, 13, -8, 14, -12, 7, -12, 0, -13, -6, -8, -14 )

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 22, 0 )

[node name="shooter_gunshotSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
volume_db = -20.0
max_distance = 400.0

[node name="shooter_attackSound" type="AudioStreamPlayer2D" parent="."]
pause_mode = 1
stream = ExtResource( 11 )
volume_db = -20.0

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
